[tool.poetry]
name = "playground-apachebeam"
version = "0.1.0"
description = ""
authors = ["keijun-kumagai <keijun.kumagai@dena.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
apache-beam = {extras = ["gcp"], version = "^2.42.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
